--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
+    "classnames": "^2.3.1",
     "git": "^0.1.5",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
